Fixed a z-index conflict

--- a/src/components/navBar/NavBar.scss
+++ b/src/components/navBar/NavBar.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-flow: column;
   position: absolute;
+  z-index: 9999;
 
   padding: 1rem 0;
   width: 100%;
